# shine

./: CMakeLists.txt
libhue/: BridgeDetail.cpp  BridgeDetail.h  CMakeLists.txt  DiscoveryNetScan.cpp  DiscoveryNetScan.h  DiscoveryUPnP.cpp  DiscoveryUPnP.h  discovery.cpp  discovery.h  huebridgeconnection.cpp  huebridgeconnection.h  lights.cpp  lights.h  scene.cpp  scenes.cpp  schedule.h  sensor.cpp  sensors.cpp
